manifests/base/resources/audit/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: audit
    chart: audit-3.5.0
    heritage: Helm
    release: audit
  name: audit
  namespace: $(NAMESPACE)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
      release: audit
  template:
    metadata:
      annotations:
        checksum/configs: 50aa13ca4136810cb0c3957c76a167c8cf2a3c27d25aa8f2c901d336f38d4f19
        checksum/secrets: dec8c0a706818a7bac28589d4d8f64b5853ce9c4a1462ed0c1d5cc00e9a99809
      labels:
        app: audit
        audit-nats-client: "true"
        release: audit
    spec:
      containers:
        - env:
            - name: NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/audit/mongodbUri
            - name: TOKEN_AUTH_PRIVATE_KEY_FILE
              value: /run/secrets/qlik.com/audit/tokenAuthPrivateKey
            - name: TOKEN_AUTH_PRIVATE_KEY_ID_FILE
              value: /run/secrets/qlik.com/audit/tokenAuthPrivateKeyId
            - name: EDGE_AUTH_URI
              valueFrom:
                configMapKeyRef:
                  key: edgeAuthUri
                  name: audit-configs
            - name: FEATURE_FLAGS_URI
              valueFrom:
                configMapKeyRef:
                  key: featureFlagsUri
                  name: audit-configs
            - name: INGRESS_AUTH_URL
              valueFrom:
                configMapKeyRef:
                  key: ingressAuthUrl
                  name: audit-configs
            - name: KEYS_URI
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: audit-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: audit-configs
            - name: NATS_STREAMING_CLUSTER_ID
              valueFrom:
                configMapKeyRef:
                  key: natsStreamingClusterId
                  name: audit-configs
            - name: NATS_URI
              valueFrom:
                configMapKeyRef:
                  key: natsUri
                  name: audit-configs
            - name: POLICY_DECISIONS_URI
              valueFrom:
                configMapKeyRef:
                  key: policyDecisionsUri
                  name: audit-configs
            - name: STORAGE_BUCKET
              valueFrom:
                configMapKeyRef:
                  key: storageBucket
                  name: audit-configs
            - name: STORAGE_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: storageEndpoint
                  name: audit-configs
            - name: STORAGE_REGION
              valueFrom:
                configMapKeyRef:
                  key: storageRegion
                  name: audit-configs
            - name: AUTH_ENABLED
              value: "true"
            - name: NATS_CHANNELS
              value: system-events.engine.app,system-events.user-session,system-events.spaces,system-events.licenses,system-events.generic-links,system-events.api-keys,system-events.web-security,system-events.user-identity,system-events.tenants
            - name: NATS_ENABLED
              value: "true"
            - name: TOKEN_AUTH_ENABLED
              value: "true"
          image: qliktech-docker.jfrog.io/audit:2.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 6080
          name: main
          ports:
            - containerPort: 6080
          readinessProbe:
            httpGet:
              path: /ready
              port: 6080
          volumeMounts:
            - mountPath: /run/secrets/qlik.com/audit
              name: audit-secrets
              readOnly: true
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: audit-secrets
          secret:
            secretName: audit-secrets
---
