manifests/base/resources/audit/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6080"
    prometheus.io/scrape: "true"
  labels:
    app: audit
    chart: audit-3.3.4
    heritage: Helm
    release: audit
  name: audit
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: audit
    port: 6080
    protocol: TCP
    targetPort: 6080
  selector:
    app: audit
    release: audit
  type: ClusterIP
---
