manifests/base/resources/audit/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://audit-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: audit
    chart: audit-3.3.4
    heritage: Helm
    release: audit
  name: audit
  namespace: $(NAMESPACE)
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: audit
          servicePort: 6080
        path: /api/v1/audits
---
